<resources>
    <string name="app_name">E-Parte</string>
    <string name="textoHomeMail">Correo:</string>
    <string name="placeHolderMail">ejemplo@gmail.com</string>
    <string name="textViewPasswordHome">Contraseña:</string>
    <string name="passwordHomeHint">*********</string>
    <string name="logInButtonText">Iniciar sesión</string>
    <string name="registerButtonHomeText">Regístrate</string>
    <string name="guestButtonHomeText">Descargar parte</string>
    <string name="buttonCodeText">Obtener parte (PDF)</string>
    <string name="placeHolderCode">Introducir código</string>
    <string name="hintNameR">Nombre*</string>
    <string name="hintPasswordR">Contraseña*</string>
    <string name="hintCPasswordR">Confirmar contraseña*</string>
    <string name="hintMailR">Correo*</string>

    <string name="buttonRegisterR">registrar</string>
    <string name="txt1I">Bloque 1:  los datos básicos del accidente
El primer paso es dejar claro los datos básicos del siniestro, esto es: fecha, hora, lugar (lo más exacto posible)... También hay que indicar si se han sufrido daños materiales y/o personales, cuántos vehículos se han visto implicados, si se han producido daños en el mobiliario urbano o a terceras personas y, muy importante, si ha habido testigos.</string>
    <string name="bReportM">hacer parte</string>
    <string name="bInstructionsM">Instrucciones</string>
    <string name="bAddCarM">Añadir coche</string>
    <string name="passwordEquals">Las contraseñas no coinciden</string>
    <string name="fieldsEmpty">Por favor rellena todos los campos</string>
    <string name="txtTitleI">Instrucciones</string>
    <string name="txt2I">Bloque 2: conductor A y conductor B En el parte amistoso de accidentes encontrarás dos apartados, uno pintado en azul para el conductor A y otro pintado en amarillo para el conductor B. Es muy importante tener claro quién es el A y quién es el B para no mezclar los datos. En cada apartado, además de los datos del coche (nombre del asegurado, compañía aseguradora, conductor y, muy importante, el punto inicial del accidente. En este bloque también se anotan los distintos daños que hayan sufrido los vehículos. También es el lugar para reflejar algunas observaciones que se quiera hacer constar.</string>
    <string name="txt3I">Bloque 3: el croquis Hora de dibujar. No hace falta ser un artista, lo importante es ser generosos en detalles. Esta parte es la destinada a explicar cómo se ha producido el accidente. Su contenido es determinante porque será lo que dictamine en un primer momento quién ha tenido la culpa. Para no encontrarte con sorpresas desagradables a posteriori no seas parco en detalles. Explica si el coche estaba adelantando, si estaba bien o mal estacionado, si respetó o no alguna señal... Cualquier detalle, aunque te parezca poco importante, ayudar.</string>
    <string name="registerV">Vehículo registrado</string>
    <string name="resgisterUser">Usuario registrado</string>
    <string name="txtWarningLogInH">Este correo no está registrado o la contraseña es incorrecta</string>
    <string name="txtTitleH">Iniciar sesión en E-Parte</string>
    <string name="txtRegisterH">¿Nuevo en E-Parte?</string>
    <string name="bToHomeL">Entrar</string>
    <string name="txtCodeE">CÓDIGO:</string>
    <string name="inputMailE">E-mail accidentado B</string>
    <string name="relleno_datos_vehiculo">Relleno datos vehículo A</string>
    <string name="btnRegVD">Register</string>
    <string name="tvAsegurado">Asegurado(veáse póliza de seguro)</string>
    <string name="path"><![CDATA[Files > Android SDK built for x86 > Android > data > institute.immune.e_parte > files > Documents]]></string>
    <string name="txtTitlePath">Parte guardado en:</string>
    <string name="bDownloadReport">Obtener parte y volver al menú</string>
    <string name="bSend">Enviar</string>
</resources>